--- a/src/components/pages/quiz/submit/Submit.scss
+++ b/src/components/pages/quiz/submit/Submit.scss
@@ -1,11 +1,25 @@
+@import '../../../../App.scss';
+
 .submit-layout {
-    height: calc(100% - 72px);
+    // height: calc(100% - 72px);
+
+    .submit-layout-content {
+        padding: 1rem;
+
+        @include Responsive(sm) { padding: 1.5rem; }
+        @include Responsive(md) { padding: 2.5rem; }
+        @include Responsive(lg) { padding: 3rem; }
+    }
+
     h1 {
         padding: 15px;
         margin-bottom: 0;
-        font-size: 2.1875rem;
+        font-size: 1.5rem;
         text-align: left;
         text-transform: capitalize;
+
+        @include Responsive(sm) { font-size: 1.875rem; }
+        @include Responsive(md) { font-size: 2.1875rem; }
     }
 
     .submit-layout-list-degree {
