--- a/src/components/pages/author/editCourse/editWeek/EditWeek.scss
+++ b/src/components/pages/author/editCourse/editWeek/EditWeek.scss
@@ -42,7 +42,7 @@
     justify-content: center;
 
     .btn-wrap {
-      margin: 1rem;
+      margin: 1rem 1rem 0 1rem;
 
       .edit-btn-save {
         font-weight: 500;
