--- a/src/components/pages/course/Course.scss
+++ b/src/components/pages/course/Course.scss
@@ -5,8 +5,19 @@
 
     .course-left{
         background-color: #F0F3F5; 
-        overflow-y: auto;
-        overflow-x: hidden;
+
+        .ant-layout-sider-children {
+            overflow-x: hidden;
+            overflow-y: auto;
+        }
+
+        .ant-layout-sider-zero-width-trigger {
+            top: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 36px;
+        }
     }
 
     .menu_item {
