--- a/src/components/pages/course/supplement/Supplement.scss
+++ b/src/components/pages/course/supplement/Supplement.scss
@@ -1,3 +1,5 @@
+@import '../../../../App.scss';
+
 .supplement {
     width: 100%;
     height: 100%;
@@ -5,20 +7,25 @@
     overflow-y: scroll;
 
     .supplement-container {
-        margin: 0 8rem;
-        padding: 2rem 0;
+        // margin: 0 8rem;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
     }
 
     .supplement-header {
         text-align: left;
         margin-bottom: 1rem;
+
         h1 {
             font-family: Open Sans;
             font-weight: 700;
             color: #1f1f1f;
-            font-size: 34px;
+            font-size: 1.625rem;
             line-height: 46px;
             margin-bottom: 6px;
+
+            @include Responsive(sm) { font-size: 1.875rem; }
+            @include Responsive(md) { font-size: 2.125rem; }
         }
     }
 
@@ -47,7 +54,7 @@
                 li a {
                     display: flex;
                     align-items: center;
-                    height: 3rem;
+                    padding: 1rem 0;
                     color: #1F1F1F;
 
                     .subtopic-icon {
@@ -59,8 +66,13 @@
                     p {
                         margin-bottom: 0;
                         font-family: OpenSans-Bold,OpenSans,Arial,sans-serif;
-                        font-size: 1rem;
-                        line-height: 1.5rem;
+                        font-size: 0.875rem;
+                        line-height: 1rem;
+
+                        @include Responsive(sm) { 
+                            font-size: 1rem;
+                            line-height: 1.5rem;
+                        }
 
                         strong {
                             text-transform: capitalize;
