--- a/src/components/pages/admin/user/user.scss
+++ b/src/components/pages/admin/user/user.scss
@@ -91,12 +91,14 @@
           .userUpdateItem {
             display: flex;
             flex-direction: column;
+            align-items: flex-start;
             margin-top: 10px;
+            .lable {
+              margin-bottom: 3px;
+              font-size: 14px;
+            }
           }
-          .userUpdateItem > .lable {
-            margin-bottom: 3px;
-            font-size: 14px;
-          }
+          // .userUpdateItem >
           .userUpdateInput {
             border: none;
             width: 500px;
