--- a/src/components/pages/admin/userList/userlist.scss
+++ b/src/components/pages/admin/userList/userlist.scss
@@ -1,5 +1,6 @@
 .UserList {
   flex: 4;
+  padding: 5px;
   .userListUser {
     display: flex;
     align-items: center;
@@ -12,16 +13,20 @@
     }
   }
   .userEdit {
+    width: 80px;
+    height: 50px;
     border: none;
     border-radius: 10px;
     background-color: rgb(105, 223, 184);
     margin-right: 10px;
     cursor: pointer;
+    text-align: center;
   }
   .userEdit:hover {
     background-color: rgb(105, 190, 162);
   }
   .userDel {
     cursor: pointer;
+    color: red;
   }
 }
